--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Hieu A. Doan"
-  avatar           : "profilePic.jpg"
+  avatar           : "images/profilePic.jpg"
   bio              : "Ph.D. in Chemical Engineering"
   location         : "Chicago, IL"
   employer         :
