--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Home"
+title                    : "Hieu Anh Doan"
 title_separator          : "-"
 name                     : &name "Hieu Anh Doan"
 description              : &description "personal description"
