add research tab

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@ main:
   - title: "Presentations"
     url: /talks/    
 
-#  - title: "Teaching"
-#    url: /teaching/    
+  - title: "research"
+    url: /research/    
     
  # - title: "Portfolio"
  #   url: /portfolio/
