--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@ main:
   - title: "Presentations"
     url: /talks/    
 
- # - title: "Portfolio"
- #   url: /portfolio/
+  - title: "Software"
+    url: /software/
         
  # - title: "Blog Posts"
  #   url: /year-archive/
