--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
-  - title: "Research"
-    url: /research/    
+  #- title: "Research"
+  #  url: /research/    
 
   - title: "Publications"
     url: /publications/
@@ -9,8 +9,8 @@ main:
   - title: "Presentations"
     url: /talks/    
 
-  - title: "Software"
-    url: /software/
+  #- title: "Software"
+  #  url: /software/
         
  # - title: "Blog Posts"
  #   url: /year-archive/
