update postion title

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Hieu Anh Doan"
   avatar           : "profilePic.jpg"
-  bio              : "Postdoctoral appointee at Argonne National Laboratory"
+  bio              : "Assistant Scientist at Argonne National Laboratory"
   location         : "Lemont, IL"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
