change blog posts to Hieu's blog

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ main:
   #- title: "Software"
   #  url: /software/
         
-  - title: "Blog Posts"
+  - title: "Hieu's Blog"
     url: /year-archive/
     
   - title: "CV"
