Removed blog for now

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,8 +12,8 @@ main:
   #- title: "Software"
   #  url: /software/
         
-  - title: "Hieu's Blog"
-    url: /year-archive/
+  #- title: "Hieu's Blog"
+  #  url: /year-archive/
     
   - title: "CV"
     url: /files/Doan-CV.pdf
