--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Hieu Anh Doan"
   avatar           : "profilePic.jpg"
-  bio              : "Assistant Scientist at Argonne National Laboratory"
-  location         : "Lemont, IL"
+  bio              : "Computational Scientist"
+  location         : "Chicago, IL"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=nrsUdEoAAAAJ&hl=en"
