Added PhD to bio

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Hieu Anh Doan"
   avatar           : "profilePic.jpg"
-  bio              : "Chemical Engineer"
+  bio              : "Chemical Engineer, Ph.D."
   location         : "Chicago, IL"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
